# PlayAgricolaStatistics

./: .gitignore  404.html  asset-manifest.json  create_files_for_webapp.py  create_json.py  index.html  pyproject.toml  requirements.txt
Webapp/: README.md  helpers.py  web_app.py
assets/: index-BCk9yPxe.js  index-BLgxwOQH.js  index-B_YIW-52.js  index-BcNGIqS0.js  index-Bjt0Q059.js  index-C9_Hq9k3.js  index-CAC5QvuO.js  index-CcAQWPkn.css  index-Cdrn8sC0.css  index-DGzMCq3g.css  index-DJGyVN4O.js  index-DW4svvWa.js  index-DyvMSWBf.js  index-G4C8wF7u.css  index-bWGGqJy4.js  index-el9wJHXU.css  index-tQBcVcWK.js  index-v9SHouWQ.js
data/: stats.json
static/css/: main.04930ae8.css  main.04930ae8.css.map  main.a5b8e54e.css  main.a5b8e54e.css.map
static/js/: main.0827597e.js  main.0827597e.js.map  main.0b4a3758.js  main.0b4a3758.js.map  main.13ba4023.js  main.13ba4023.js.map  main.25425dde.js  main.25425dde.js.map  main.3008019a.js  main.3008019a.js.map  main.4abd2464.js  main.4abd2464.js.map  main.748d0e5b.js  main.748d0e5b.js.LICENSE.txt  main.748d0e5b.js.map  main.74a8c80d.js  main.74a8c80d.js.map  main.91899778.js  main.91899778.js.map  main.a0e51361.js  main.a0e51361.js.map  main.bd7ee328.js  main.bd7ee328.js.map  main.c7aa018f.js  main.c7aa018f.js.map  main.f9063fe2.js  main.f9063fe2.js.map
webapp/: .gitignore  bun.lockb  index.html  package.json  vite.config.ts
webapp/src/: App.tsx  CardView.tsx  cardutils.ts  data.json  hooks.ts  index.css  router.tsx  types.ts
webappvite/: .gitignore  bun.lockb  package.json
webappvite/src/: App.tsx  CardView.tsx  (+2 more)
(+5 files in other folders)
